tests/ui/link-native-libs/link-arg-from-rs2.stderr
error: linking modifier `export-symbols` is only compatible with `static` linking kind
  --> $DIR/link-arg-from-rs2.rs:3:53
   |
LL | #[link(kind = "link-arg", name = "arg", modifiers = "+export-symbols")]
   |                                                     ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

